--- a/package.json
+++ b/package.json
@@ -37,24 +37,23 @@
   "types": "dist/router-component.d.ts",
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.5",
-    "@types/sinon": "^7.0.3",
-    "@types/youtube": "0.0.34",
-    "banner-cli": "0.11.1",
+    "@types/mocha": "^5.2.7",
+    "@types/sinon": "^7.0.13",
+    "banner-cli": "^0.14.0",
     "chai": "^4.2.0",
     "http-server": "^0.11.1",
-    "karma": "^3.1.1",
-    "karma-chrome-launcher": "^2.2.0",
+    "karma": "^4.2.0",
+    "karma-chrome-launcher": "^3.0.0",
     "karma-mocha": "^1.3.0",
-    "karma-typescript": "^3.0.13",
-    "mocha": "^5.2.0",
-    "rollup": "^0.67.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-typescript2": "^0.21.1",
-    "sinon": "^7.1.1",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.1.6",
+    "karma-typescript": "^4.1.1",
+    "mocha": "^6.2.0",
+    "rollup": "^1.18.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-typescript2": "^0.22.1",
+    "sinon": "^7.4.0",
+    "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.5.3",
     "uglify-es": "^3.3.9"
   },
   "scripts": {
